
* new functionality to set an ``httpErrorHook`` function, which is
  called when a HTTP error occurs when a URL is resolved using
  ``.render()``. It is called with an ``xhr`` (``jqXHR``) object as
  the first argument. 

* The ``httpErrorHook`` functionality is also used by the autocomplete
  widget when a URL is in use as a data source.

* Now correctly make deferred returned by ``.render()`` fail when
  there is a problem resolving URLs during rendering, including when
  sub-views are in use.

1.0b3 (2012-12-06)
==================

* Switch to the Buster.JS test framework and the Sinon.JS mocking
  library. See :doc:`the development documentation <development>` for
  more information.

* obviel-forms now uses Bootstrap_ CSS classes. If Bootstrap CSS is included
  on a page, the forms will render with pretty form widgts.

  .. _Bootstrap: http://twitter.github.com/bootstrap/

* Removed js.obviel Fanstatic_ packaging. Instead moved this to a
  `separate project`_, just like other Fanstatic projects.

  .. _`separate project`: https://bitbucket.org/fanstatic/js.obviel

* Make ``option:value`` configuration within JSON-Templates possible.
  (using ``fromString`` instead of using the ``Template
  constructor``). You may need to upgrade to the latest version of
  JSON-Template (now included in ``src/dependencies``) to make this
  work.

* Upgraded JSON-Template in ``src/dependencies`` to the latest version
  (0.85).
 
* Beginnings of Obviel Sync. This is as yet undocumented and
  incomplete, but the goal is to allow the developer to define
  declaratively how client models (and UI updates) interact with the
  server models.

1.0b2 (2012-07-19)
==================

* **GREAT RENAMING**: this one breaks backwards compatibility! Any
  names previously using under_scores now use camelCase, to better
  follow JavaScript conventions. This means your previous Obviel code
  will break. In particular:

  * ``html_url``, ``jsont_url`` and ``obvt_url`` are now ``htmlUrl``,